<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".profile.Login">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@android:color/white"
        app:itemIconTint="@color/colorPrimary"
        app:itemTextColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu" />


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:foregroundTint="#FFFFFF"
        android:minHeight="?attr/actionBarSize"
        app:itemBackground="@color/colorIcon"
        app:itemIconTint="@color/colorIcon"
        app:itemTextColor="@color/colorIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/top_toolbar">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barika"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:gravity="center_vertical"/>

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:context=".profile.Login">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_horizontal"
            android:letterSpacing="0.1"
            android:text="@string/Login"
            android:textColor="@color/colorLogo"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/login_subtitle"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/barika"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/login_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/login_email"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/barika"
            android:text="@string/tag"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@id/login_password"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="130dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/email_label"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/login_create_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="110dp"
            android:text="@string/new_user"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/login_pwd_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/pwd_forget"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>