<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@android:color/white"
        app:itemIconTint="@color/colorAccent"
        app:itemTextColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:foregroundTint="#FFFFFF"
        android:minHeight="?attr/actionBarSize"
        app:itemBackground="@color/colorIcon"
        app:itemIconTint="@color/colorIcon"
        app:itemTextColor="@color/colorIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/top_toolbar">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barika"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:gravity="center_vertical"/>

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        android:orientation="vertical"
        android:background="@android:color/white">

        <View
            android:id="@+id/divider0"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@android:color/black"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_margin="8dp"
            android:background="@android:color/white">

        <TextView
            android:id="@+id/pub_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="fill_horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:scaleType="fitXY"
            android:text="@string/pub_name1"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:paddingTop="15dp"/>

            <ImageButton
                android:id="@+id/pubexample_btntolist"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_action_tolist"
                android:layout_toRightOf="@+id/pub_name"
                android:backgroundTint="@color/colorPrimary"
                android:layout_marginTop="20dp"/>

            <TextView
            android:id="@+id/pub_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="fill_horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:scaleType="fitXY"
            android:text="@string/pub_info1"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="70dp"/>

            <TextView
                android:id="@+id/pub_otherInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="fill_horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:scaleType="fitXY"
                android:text="@string/pub_info2"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textStyle="italic"
                android:layout_marginTop="140dp"/>

            <RatingBar
                android:id="@+id/pub_example_ratingBar"
                style="?attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:isIndicator="true"
                android:numStars="5"
                android:progressBackgroundTint="@android:color/black"
                android:progressTint="@android:color/holo_orange_light"
                android:rating="0.0"
                android:secondaryProgressTint="@android:color/holo_orange_light"
                android:stepSize="0.1"
                android:layout_marginTop="180dp"
                android:layout_marginLeft="5dp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/comment_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:scaleType="fitXY"
                android:text="@string/comment_list"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/btn_tocomment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="9dp"
                android:background="@drawable/ic_action_tocomment"
                android:backgroundTint="@android:color/white" />
        </LinearLayout>

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@android:color/black"/>

        <TextView
            android:id="@+id/parent_list_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="5dp"
            android:scaleType="fitXY"
            android:text="@string/list_title"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@android:color/black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pubexample_recyclerViewDrinkList"
            android:layout_width="match_parent"
            android:layout_height="383dp"
            android:visibility="visible" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@android:color/black"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>